@@ -1,6 +1,8 @@
 v1.2.1 (2017.08.xx)
   - Add "Disable Channel", "Add to Favorite Channels" and "Remove from Favorite Channels" Client Actions to channel context menus
   - Adapt to new backend discovery URLs (api.hdhomerun.com)
+  - Fall back to using a direct tuner stream for Live TV if a storage engine has not been discovered on the network
+  - Add "List discovered devices" PVR Client Specific setting
 
 v1.2.0 (2017.07.23)
   - Update libhdhomerun library to version 2017.06.12
